--- a/Ejercicio nivel2/EjercicioHTML.html
+++ b/Ejercicio nivel2/EjercicioHTML.html
@@ -17,12 +17,15 @@
     300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <title>Ejercicio HTML</title>
+    <title>Ejercicio nivel 2</title>
 </head>
 
 <body>
-    
+        <!-- en el contenedor he puesto todas las partes que componen la página -->
     <div class="container">
+
+        <!-- en el header he puesto el cuadrado de la imagen separado de los otros tres iconos que van en otro div para poder manejarlos mejor, tambien he añadido un enlace y una imagen para cada uno de ellos -->
+
         <header class="header">
 
             <img src="imagen/default.png" alt="logo" class="header-logo">
@@ -33,8 +36,9 @@
 
             <i><a href="#"><img src="imagen/whatsapp_icon_191772.png" alt="whats" class="header-brand3"></i></a>
             
-        </header>   
+        </header> 
 
+            <!-- en la nav he puesto varios enlaces junto con lo que significa cada uno de ellos para redireccionar al tema elegido -->
         <nav class="nav-main">
 
                     <a class="nav-menu" href="#">Inicio</a>
@@ -42,8 +46,9 @@
                     <a class="nav-menu" href="#">Idiomas</a>
                     <a class="nav-menu" href="#">Galeria</a>
                     <a class="nav-menu" href="#">Contacto</a>
-        </nav>     
+        </nav>  
 
+            <!-- en section he puesto el primer div para los tres primero articulos, ya que van separados el cuarto en la misma linea. Cada uno de ellos tienen su imagen, su texto, titulo y un boton o enlace para leer más-->
          <section class="seccion">
 
                <div class="div-articulos">
@@ -67,6 +72,7 @@
                 </article>
             </div>
 
+                    <!-- este div aunque esta en section, va separado al ir centrado y no en fila como los tres anteriores -->
             <div class="div-seccion">
 
                 <article class="articulo4">
@@ -78,6 +84,8 @@
             </div>
 
         </section>
+
+                <!--en el footer he usado un h2 para poner los datos personales y dos enlaces con sus respectivos iconos para dar opción a obterner mas datos personales como el email o teléfono  -->
 
         <footer class="footer">
               <h2>&#169; Eva Fernández 2021 &nbsp;&nbsp;&nbsp; <a href="#"><i class="fa fa-envelope-square">&nbsp; Email</i></a>&nbsp;&nbsp;&nbsp;<a href="#"> <i class="fa fa-phone" aria-hidden="true">&nbsp; Phone</i></a></h2>
